[package]
name = "arraydiff"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "arraydiff"
path = "src/lib.rs"

[features]
default = []
cuda = []

[build-dependencies]
gcc = "*"
walkdir = "*"

[dependencies]
libc = "*"
rand = "*"
arithmetic = { path = "../libarithmetic" }
densearray = "*"
devicemem_cuda = { path = "../libdevicemem_cuda" }
operator = { path = "../liboperator" }
rng = "*"
