[package]
name = "arraydiff"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "arraydiff"
path = "src/lib.rs"

[features]
default = []
#cuda = []

[build-dependencies]
gcc = "*"
walkdir = "*"

[dependencies]
lazy_static = "*"
libc = "*"
rand = "*"
#arithmetic = { path = "../libarithmetic" }
async_execution = { path = "../async_execution" }
cuda = { version = "*", optional = true }
cuda_dnn = { version = "*", requires = "cuda" }
densearray = "*"
devicemem_cuda = { path = "../libdevicemem_cuda" }
fnv = "*"
rng = "*"
