[package]
name = "arraydiff"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "arraydiff"
path = "src/lib.rs"

[features]
default = []

[build-dependencies]
gcc = "*"
walkdir = "*"

[dependencies]
#lazy_static = "*"
libc = "*"
rand = "*"
async_execution = { path = "../async_execution" }
cuda = { version = "*", optional = true }
cuda_dnn = { version = "*", requires = "cuda" }
densearray = "*"
devicemem_cuda = { path = "../libdevicemem_cuda", requires = "cuda" }
fnv = "*"
rng = "*"
